# mriFilter

./: CMakeLists.txt  CMakeLists.txt.user.1.3  CMakeLists.txt.user.423c732  CMakeLists.txt.user.83c4722  CMakeLists.txt.user.b55197c  CMakeLists.txt.user.b55197c.2.7pre1  README.md  main.cpp  mriCell.cpp  mriCell.h  mriCellMaterial.cpp  mriCellMaterial.h  mriCommunicator.cpp  mriCommunicator.h  mriConstants.h  mriConvergence.cpp  mriCoordItem.h  mriException.cpp  mriException.h  mriExpansion.cpp  mriExpansion.h  mriImagedata.cpp  mriImagedata.h  mriLSMR.cpp  mriMP.cpp  mriMap.cpp  mriOptions.cpp  mriOptions.h  mriPoisson.cpp  mriPressure.cpp  mriProcesses.cpp  mriProgramOptions.cpp  mriProgramOptions.h  mriReynolds.cpp  mriSamples.cpp  mriSamplingOptions.h  mriScan.cpp  mriScan.h  mriSequence.cpp  mriSequence.h  (+26 more)
CMake/: FindMETIS.cmake
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/content/: about.rst  commandFileGuide.rst  examples.rst  installationAndRun.rst
examples/: .gitignore
src/: CMakeLists.txt  main.cpp  mriCell.cpp  mriCell.h  mriCommunicator.cpp  mriCommunicator.h  mriConstants.h  mriCoordItem.cpp  mriException.h  mriExpansion.cpp  mriExpansion.h  mriIO.cpp  mriIO.h  mriImagedata.cpp  mriImagedata.h  mriMP.cpp  mriMap.cpp  mriOperation.cpp  mriOperation.h  mriOptions.cpp  mriOptions.h  mriOutput.cpp  mriOutput.h  mriPoisson.cpp  mriPressure.cpp  mriProcesses.cpp  mriReynolds.cpp  mriSamples.cpp  mriSamplingOptions.cpp  mriSamplingOptions.h  mriScan.cpp  mriScan.h  mriSequence.cpp  mriSequence.h  mriSignatureFlows.cpp  mriStatistics.cpp  mriStatistics.h  mriStreamlineOptions.cpp  mriStreamlineOptions.h  mriStructuredScan.cpp  (+14 more)
