# INCLUDE SOURCES
AUX_SOURCE_DIRECTORY(. SRC_LIST)
INCLUDE_DIRECTORIES(".")

# INCLUDE BOOST AND MPI LIBS
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(MPI REQUIRED)

# WRITE EXECUTABLE IN BIN
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

# INCLUDE LIBRARY PATH
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})

# SET COMPILER FLAGS
ADD_DEFINITIONS("-std=c++11 -O3")

# CREATE EXECUTABLE
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

# LINK LIBRARIES
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES} ${MPI_LIBRARIES})

